js/js.translator/testData/incremental/invalidation/jsExportWithMultipleFiles/lib1/l1.1.kt
@JsExport
fun foo() = 77
